--- a/css/style.css
+++ b/css/style.css
@@ -147,3 +147,30 @@ a {
   );
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
 }
+.channel-info {
+  background-color: #fafafa;
+  padding-top: 1.6rem;
+}
+
+.channel-info .container {
+  display: flex;
+  align-items: center;
+}
+
+.channel-icon {
+  flex-basis: 8rem;
+  height: 8rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.channel-title {
+  flex: 1 1 auto;
+  margin: 0 2rem;
+}
+
+.channel-title h1 {
+  font-size: 2.4rem;
+  font-weight: 400;
+  white-space: nowrap;
+}
