--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,70 @@ a {
   font-weight: 400;
   white-space: nowrap;
 }
+aside {
+  position: fixed;
+  top: 5.7rem;
+  display: flex;
+  width: 13rem;
+  height: 95vh;
+  background-color: #202020;
+  border-style: solid;
+  border-color: #202020;
+  flex-direction: column;
+  align-items: center;
+}
+aside > section > ul {
+  background-color: white;
+  height: 10%;
+  margin-top: 5%;
+}
+#aside-top-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+}
+#aside-top-section > ul {
+  height: 2em;
+  margin-bottom: -1%;
+}
+#aside-mid-section {
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  border-style: solid;
+  border-width: 2px 0 0 0;
+  border-radius: 1%;
+  border-color: #373737;
+}
+#aside-mid-section > ul {
+  height: 2em;
+  margin-bottom: -1%;
+}
+#aside-bottom-section {
+  margin-top: 20%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px 0 0 0;
+  border-radius: 1%;
+  border-color: #373737;
+}
+#aside-bottom-section > ul {
+  height: 1.5em;
+  margin-bottom: -1%;
+}
+.sideButton {
+  text-align: start;
+  height: 100%;
+  width: 100%;
+  padding: 1%;
+  color: #f0f0f0;
+  border-width: 0;
+  background-color: #202020;
+}
