--- a/css/style.css
+++ b/css/style.css
@@ -241,3 +241,31 @@ aside > section > ul {
   border-width: 0;
   background-color: #202020;
 }
+aside > section > ul:hover {
+  background-color: grey;
+}
+aside > section > ul:hover > .sideButton {
+  background-color: grey;
+}
+aside > section > ul:hover > {
+  background-color: grey;
+}
+.channel-subscriber-count {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.8;
+}
+
+.channel-subscribe {
+  display: flex;
+  height: 3.7rem;
+  color: white;
+}
+
+.subscribe-btn {
+  width: 14.2rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  background-color: red;
+  margin-right: 0.4rem;
+}
