--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ aside {
   border-color: #202020;
   flex-direction: column;
   align-items: center;
+  visibility: hidden;
 }
 aside > section > ul {
   background-color: white;
@@ -293,4 +294,52 @@ aside > section > ul:hover > {
 .nav-item a.current {
   color: var(--black-text);
   border-bottom: 0.3rem solid #6e6e6e;
+}
+.channel-content .container {
+  display: flex;
+  padding-top: 2.4rem;
+  padding-bottom: 2.4rem;
+  color: rgb(114, 114, 114);
+}
+
+.channel-videos {
+  display: flex;
+  flex-direction: column;
+  min-width: 42.5rem;
+  max-width: 107rem;
+}
+
+.video-title {
+  color: white;
+}
+
+.video-meta-data,
+.video-description {
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
+.video-description {
+  max-width: 60rem;
+  line-height: 1.4;
+}
+
+.video-meta-data li {
+  display: inline-block;
+}
+
+.video-creator {
+  padding-right: 0.4rem;
+}
+
+.video-views::after {
+  content: "\00B7";
+  font-size: 2.2rem;
+  padding-left: 0.4rem;
+  vertical-align: middle;
+}
+.video-thumbnail,
+img {
+  width: 15vw;
+  height: 15vh;
 }
