hamburger menu JS click

--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,7 @@ aside {
   border-color: #202020;
   flex-direction: column;
   align-items: center;
+  display: none;
 }
 aside > section > ul {
   background-color: white;
