--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ a {
 .line {
   width: 2.5rem;
   height: 0.2rem;
-  background-color: white;
+  background-color: grey;
   border-radius: 25%;
 }
 .logo h1 {
@@ -442,4 +442,7 @@ input:checked + .slider {
 
 input:checked + .slider::before {
   transform: translateX(2.5rem);
+}
+.light {
+  color: #202020;
 }
